Updated design.  Looking good!

--- a/Lounge/App.xaml
+++ b/Lounge/App.xaml
@@ -5,14 +5,6 @@
     <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes\ExpressionDark.xaml" />
-                <!--
-                <ResourceDictionary Source="Themes\BureauBlack.xaml" />
-                <ResourceDictionary Source="Themes\BureauBlue.xaml" />
-                <ResourceDictionary Source="Themes\ExpressionDark.xaml" />
-                <ResourceDictionary Source="Themes\ExpressionLight.xaml" />
-                <ResourceDictionary Source="Themes\ShinyBlue.xaml" />
-                <ResourceDictionary Source="Themes\ShinyRed.xaml" />
-                <ResourceDictionary Source="Themes\WhistlerBlue.xaml" />
-                --></ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary></Application.Resources>
 </Application>
