--- a/Lounge/MainWindow.xaml
+++ b/Lounge/MainWindow.xaml
@@ -299,10 +299,9 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-
-                <Label x:Name="AudioCount" Grid.Row="0" Content="0 audio added" />
-                <Label x:Name="PhotoCount" Grid.Row="1" Content="0 photos added" />
-                <Label x:Name="VideoCount" Grid.Row="2" Content="0 videos added" />
+                <CheckBox x:Name="AudioCount" Grid.Row="0" Content="0 audio added" IsChecked="True"/>
+                <CheckBox x:Name="PhotoCount" Grid.Row="1" Content="0 photos added" IsChecked="True"/>
+                <CheckBox x:Name="VideoCount" Grid.Row="2" Content="0 videos added" IsChecked="True"/>
             </Grid>
 
         </Grid>
